# sqf-analyzer

./: .gitignore  Cargo.toml  README.md  bla.txt  build_database.py
.github/workflows/: release.yaml
examples/: sqf-analyzer.rs  support_info.rs
src/: README.md  analyzer.rs  cpp.rs  database.rs  error.rs  lib.rs  parser.rs  parser1.rs  pratt_parser.rs  preprocessor.pest  preprocessor.rs  span.rs  sqf.pest  types.rs
src/analyzer/: database.rs  mod.rs  operators.rs  type_operations.rs  unary.rs
src/cpp/: mod.rs  parser.rs
src/parser/: expr.rs  mod.rs  pratt.rs
src/preprocessor/: ast.rs  define.rs  include.rs  iterator.rs  mod.rs  parser.rs  preprocessor.pest
tests/: analyser.rs  parser.rs
tests/integration/: analyser.rs  call.rs  cpp.rs  main.rs  params.rs  parser.rs  pp.rs  preprocessor.rs
tests/integration/case_sensitive/addons/main/: config.cpp
tests/integration/dictionary/addons/dictionary/: config.cpp  fnc__splitString.sqf  fnc_serialize.sqf
tests/integration/examples/: basic.cpp  basic_def.sqf  basic_if.sqf  basic_parenthesis.sqf  error.sqf  expected_basic.txt  expected_basic_def.txt  expected_basic_if.txt  other.sqf
