[package]
name = "sqf"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.6"
pest_derive = "2.6"
lazy_static = "*"
walkdir = "2"
path-clean = "*"
path-slash = "*"
tinyvec = "1.6.0"
uncased = { version = "*", default-features = false }

[[example]]
name = "sqf-analyzer"

[dev_dependencies.clap]
version = "*"
features = ["cargo"]

[dev_dependencies.codespan-reporting]
version = "*"
